--- a/index.ipynb
+++ b/index.ipynb
@@ -34,11 +34,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "15.0"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "# Your solution here "
+    "# x = coffee, y = tea\n",
+    "# 4x + 4y = 12 \n",
+    "#3x - 2y = 0\n",
+    "# (3x - 2y)*2 = 6x - 2y\n",
+    "#    (6x - 4y = 0) \n",
+    "# + (4x + 4x = 12)\n",
+    "# 10x = 12 // x = 1.2\n",
+    "# 4x + 4y = 12\n",
+    "# 4(1.2) + 4y = 12\n",
+    "# 4.8 + 4y = 12\n",
+    "# 4y = 7.2 // y = 1.8 \n",
+    "# 3x = 2y --> 3(1.2) = 2(1.8) --> 3.6 = 3.6\n",
+    "\n",
+    "# Your solution here \n",
+    "(5*1.2) + (5*1.8)\n",
+    "#15"
    ]
   },
   {
@@ -62,11 +88,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your solution here "
+    "# Your solution here \n",
+    "# x - 20 = y + 20 (A)\n",
+    "# x + 22 = 2(y-22) (B)\n",
+    "# x = y + 40 (from A)\n",
+    "# y + 40 + 22 = 2(y - 22)\n",
+    "# y + 62 = 2y - 44\n",
+    "# y + 106 = 2y \n",
+    "# 106 = 2y - y\n",
+    "y = 106 \n",
+    "# x = 106 + 40\n",
+    "x = 146"
    ]
   },
   {
@@ -81,11 +117,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Your solution here "
+    "# Your solution here\n",
+    "# x + y = 30\n",
+    "# .25x + .10y = 5.70\n",
+    "# -10x - 10y = -300\n",
+    "# 25x + 10y = 570\n",
+    "# 15x = 270\n",
+    "x = 18\n",
+    "# .25(18) + .10y = 5.70\n",
+    "# 4.5 + .10y = 5.70\n",
+    "# .10y = 1.2\n",
+    "y = 12"
    ]
   },
   {
@@ -124,7 +170,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
